authelia-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: https-xmple-io
  hostnames:
    - auth-test.xmple.io
  rules:
    - backendRefs:
        - name: authelia-test
          port: 80
          kind: Service
